# learnclaudecode

./: .env.example  .gitignore  CLAUDE.md  README.md  README_INTENT.md  README_THINKING_CHAIN.md  prompt_output.txt  test_bootstrap.py  test_new_arch.py  test_refactoring.py  v0_langchain_deepseek_agent.py  v10_agent.py  v11_agent.py  v1_agent.py  v2_agent.py  v3_agent.py  v4_agent.py  v5_agent.py  v5_context_compact.py  v6_agent.py  v7_agent.py  v8_agent.py  v9_agent.py
backend/: ARCHITECTURE.md  PROJECT_CLEANUP_PLAN.md  REFACTORING_DONE.md  main.py  mcp_config.json  pyproject.toml  requirements.txt  setup.py  test_tool_loading.py
backend/app/: agent.py  agent_factory.py  agent_graph.py  agent_template.py  compaction.py  config.py  config_v2.py  insight.py  llm.py  llm_insight.py  notifications.py  prompts.py  repl.py  session.py  tools_manager.py  tracer.py
backend/app/analysis/: __init__.py  intent_recognition.py  thinking_chain.py
backend/app/background/: __init__.py  runner.py
backend/app/cli/: __init__.py  commands.py  repl.py  session.py  task_queue.py
backend/app/compact/: __init__.py  state.py
backend/app/context/: __init__.py  base.py  base_context.py  compaction.py  context.py  main_context.py  overflow_guard.py  subagent_context.py
backend/app/core/: ARCHITECTURE_COMPARISON.md  MIGRATION_COMPLETE.md  REFACTORING_SUMMARY.md  __init__.py  agent_runner.py  app_entry.py  base_context.py  example_usage.py  factory.py  history_manager.py  main_context.py  sub_context.py  task_integration.py  team_context.py  tool_registry.py
backend/app/exceptions/: README.md  __init__.py  exceptions.py
backend/app/guards/: __init__.py  action_commitment_guard.py  reflection_gate.py  todo_reminder.py
backend/app/memory/: __init__.py  compaction.py  compaction_strategies.py  guard.py  history.py  llm_invoker.py
backend/app/reasoning/: __init__.py  chain_of_thought.py
backend/app/reliability/: README.md  __init__.py  guards.py  health.py  heartbeat.py  lifecycle.py  monitor.py  monitoring.py  restart.py  retry.py
backend/app/search/: __init__.py  duckduckgo.py  fetch.py
backend/app/search_agent/: __init__.py  citation_agent.py  lead_agent.py  search_subagent.py
backend/app/services/: main_agent_service_v2.py  team_agent_service_v2.py
backend/app/session/: README.md  __init__.py  bootstrap.py  constants.py  context.py  memory.py  memory_store.py  session.py  (+1 more)
backend/examples/: intent_examples.py  test_intent.py
backend/memory/: AGENTS.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
backend/tests/: test_intent.py  test_team_tools.py
(+323 files in other folders)
