[project]
name = "learnclaudecode-backend"
version = "0.1.0"
description = "AI Agent 学习项目后端"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LearnClaudeCode Project", email = ""}
]

dependencies = [
    # 核心依赖 - 与 requirements.txt 完全兼容
    "langchain>=1.2.10",
    "langchain-openai>=0.1.0",
    "langgraph>=1.0.9",
    "python-dotenv>=1.0.0",

    # 可选依赖 - 增强功能
    "anthropic>=0.25.0",  # 支持 Claude 模型
    "prompt-toolkit>=3.0.0",
    "duckduckgo-search>=6.0.0",
    "requests>=2.31.0",

    # MCP 相关（可选）
    "mcp>=0.9.0",
    "langchain-mcp-adapters>=0.1.0",

    # CDP 浏览器自动化
    "pychrome>=0.2.3",

    # 健康检查和监控
    "flask>=3.0.0",
    "psutil>=5.9.0",

    # 新功能依赖（可选）
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[project.urls]
Homepage = "https://github.com/yourusername/learnclaudecode"
Repository = "https://github.com/yourusername/learnclaudecode.git"
Documentation = "https://learnclaudecode.readthedocs.io/"
Issues = "https://github.com/yourusername/learnclaudecode/issues"